<resources>
    <string name="app_name">Moving Company Management</string>
    <string name="create_account">Create account</string>
    <string name="moving_company">Moving Company</string>
    <string name="create_new_account">Create New Account</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="permission">Permission</string>
    <string name="manager">Manager</string>
    <string name="driver">Driver</string>
    <string name="title_activity_task_overview">task_overview</string>
    <string name="tasks_overview">tasks overview</string>
    <string name="show">show</string>
    <string name="hide">Hide</string>
    <string name="task_table">task table</string>
    <string name="workers_table">workers table</string>
    <string name="newTask">New Task</string>
    <string name="showTask">showTask</string>
    <string name="addWorker">Add Worker</string>
    <string name="selectTaskDriver">Select Task Driver</string>
    <string name="tasksList">Tasks List</string>
    <string name="title_activity_nav_tasks">nav_tasks</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="area">Area</string>
    <string name="date">Date</string>
    <string name="new_task">New task</string>
    <string name="new_worker">New worker</string>
    <string name="logout">Logout</string>
    <string name="all_task_list">All Task List</string>
    <string name="today_tasks">Today tasks</string>
    <string name="failed_tasks">Failed tasks</string>
    <string name="completed_tasks">Completed tasks</string>
</resources>
